scripts/nullness/nullgtn/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8.txt
../nullgtn/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/PrintImpl.java:13: error: [override.param] Incompatible parameter type for info.
            public void requestToPrint(String info) {
                                              ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull PrintImpl.@Initialized @NonNull <anonymous question2.PrintImpl$1>
    @NonNull void requestToPrint(@Initialized @NonNull PrintImpl.@Initialized @NonNull <anonymous question2.PrintImpl$1> this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull PrintingRequest
    @NonNull void requestToPrint(@Initialized @NonNull PrintingRequest this, @Initialized @Nullable String p0)
../nullgtn/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/impl2/PrintImpl2.java:17: error: [override.param] Incompatible parameter type for info.
            public void requestToPrint(String info) {
                                              ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull PrintImpl2.@Initialized @NonNull <anonymous question2.impl2.PrintImpl2$1>
    @NonNull void requestToPrint(@Initialized @NonNull PrintImpl2.@Initialized @NonNull <anonymous question2.impl2.PrintImpl2$1> this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull PrintingRequest
    @NonNull void requestToPrint(@Initialized @NonNull PrintingRequest this, @Initialized @Nullable String p0)
../nullgtn/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/impl2/PrintImpl2.java:30: error: [dereference.of.nullable] dereference of possibly-null reference out
                        out.close();
                        ^
../nullgtn/url18cf99526f_anasbenis_MiniProjetMay_tgz-pJ8-test_MainJ8/src/question2/InitPrintImpl.java:13: error: [override.param] Incompatible parameter type for subject.
            public void startProcessFor(String subject) {
                                               ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull InitPrintImpl.@Initialized @NonNull <anonymous question2.InitPrintImpl$1>
    @NonNull void startProcessFor(@Initialized @NonNull InitPrintImpl.@Initialized @NonNull <anonymous question2.InitPrintImpl$1> this, @Initialized @NonNull String p0)
  cannot override method in @Initialized @NonNull AnnounceInit
    @NonNull void startProcessFor(@Initialized @NonNull AnnounceInit this, @Initialized @Nullable String p0)
4 errors
